--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 									<td class="column1">10 Bits</td>
 									<td class="column1">64</td>
 								</tr>
+								<tr>
+									<td class="column1">Cobblestyone</td>
+									<td class="column1">15 Bits</td>
+									<td class="column1">64</td>
+								</tr>
 						</tbody>
 					</table>
 				</div>
