--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<script>
 	function myFunction() {
 	  var input, filter, table, tr, td, i, txtValue;
-	  input = document.getElementById("myInput");
+	  input = document.getElementById("search");
 	  filter = input.value.toUpperCase();
 	  table = document.getElementById("myTable");
 	  tr = table.getElementsByTagName("tr");
