--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<td class="column1">64</td>
 								</tr>
 								<tr>
-									<td class="column1">Cobblestyone</td>
+									<td class="column1">Cobblestone</td>
 									<td class="column1">15 Bits</td>
 									<td class="column1">64</td>
 								</tr>
